# wave

./: Cargo.toml  README.md
crates/wave/: Cargo.toml
crates/wave/src/: lib.rs  main.rs
crates/wave_allocator/: Cargo.toml
crates/wave_allocator/src/: arena.rs  lib.rs
crates/wave_ast/: Cargo.toml
crates/wave_ast/src/: ast_builder.rs  ast_kind.rs  lib.rs  literal.rs  serialize.rs  span.rs  trivia.rs
crates/wave_ast/src/ast/: assignment_expression.rs  binding.rs  call_expression.rs  class.rs  expression.rs  function_declaration.rs  identifier.rs  member_expression.rs  mod.rs  module.rs  variable_declaration.rs
crates/wave_diagnostics/: Cargo.toml
crates/wave_diagnostics/src/: graphic_reporter.rs  graphical_theme.rs  lib.rs  service.rs
crates/wave_index/: Cargo.toml
crates/wave_index/src/: lib.rs
crates/wave_interpreter/: Cargo.toml
crates/wave_interpreter/examples/: run.rs  source.wv
crates/wave_interpreter/src/: arithmethic_wrapper_binary_operation.rs  diagnostics.rs  environment.rs  eval.rs  lib.rs  logical_wrapper_binary_operation.rs  runtime.rs
crates/wave_interpreter/src/eval/: eval_result.rs  mod.rs
crates/wave_interpreter/src/evaluator/: assignment.rs  class.rs  declaration.rs  expression.rs  function.rs  literal.rs  member_expression.rs  mod.rs  module.rs  primitive.rs  primitive_operations.rs  statement.rs
crates/wave_lexer/: Cargo.toml
crates/wave_lexer/src/: byte_handlers.rs  diagnostics.rs  kind.rs  lib.rs  number.rs  string_builder.rs  token.rs  trivia_builder.rs
crates/wave_parser/: Cargo.toml
crates/wave_parser/examples/: parser.rs  source.txt  source.wv
crates/wave_parser/src/: binding.rs  class.rs  context.rs  cursor.rs  declaration.rs  diagnostics.rs  expression.rs  function.rs  grammar.rs  lib.rs  list.rs  module.rs  object.rs  operator.rs  statement.rs
crates/wave_parser/src/syntax_directed_operations/: mod.rs  prop_name.rs
crates/wave_semantic/: Cargo.toml
crates/wave_span/: Cargo.toml
crates/wave_span/src/: atom.rs  lib.rs  source_type.rs  span.rs
crates/wave_syntax/: Cargo.toml
crates/wave_syntax/src/: lib.rs  operator.rs  precedence.rs  reference.rs  symbol.rs
