[package]
name = "wave"
version = "0.1.0"
authors.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wave_allocator   = { workspace = true }
wave_ast         = { workspace = true }
wave_diagnostics = { workspace = true }
wave_index       = { workspace = true }
wave_parser      = { workspace = true }
wave_span        = { workspace = true }
wave_syntax      = { workspace = true }
wave_interpreter = { workspace = true }

[features]
serde = ["wave_ast/serde"]
