[package]
name = "wave_ast"
version = "0.1.0"
authors.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wave_span      = { workspace = true }
wave_allocator = { workspace = true }
wave_syntax    = { workspace = true }

serde      = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
ryu-js     = { workspace = true, optional = true }

[features]
default  = []
serde    = ["dep:serde", "dep:ryu-js" ,"dep:serde_json", "wave_span/serde", "wave_syntax/serde"]
