[package]
name = "wave_diagnostics"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
miette    = { workspace = true }

unicode-width = { version = "0.1.11" }
owo-colors    = { version = "3.5.0" }
textwrap      = { version = "=0.15.0" }
is-terminal   = { version = "0.4.10" }
