[package]
name = "wave_index"
version = "0.1.0"
authors.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
index_vec         = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []
serde   = ["index_vec/serde"]
