[package]
name = "wave_parser"
version = "0.1.0"
authors.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wave_lexer       = { workspace = true }
wave_ast         = { workspace = true }
wave_diagnostics = { workspace = true }
wave_allocator   = { workspace = true }
wave_span        = { workspace = true }
wave_syntax      = { workspace = true }

bitflags   = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
wave_ast   = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
