[package]
name = "wave_span"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
serde   = ["dep:serde", "compact_str/serde"]

[dependencies]
miette      = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
