[package]
name = "wave_syntax"
version = "0.1.0"
authors.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wave_index = { workspace = true }

unicode-id-start = { workspace = true }
bitflags = { workspace = true }
